--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
         <div class="map-container" id="location">
             <h2 class="section-title location-title">Campus <span>Location</span></h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3669.750537877292!2d72.63690137512297!3d23.13601807908611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e80d4022b39f3%3A0x1d4a04d603a11440!2sLDRP%20Institute%20of%20Technology%20and%20Research!5e0!3m2!1sen!2sin!4v1698777170123!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15085.818674712005!2d72.6384638!3d23.2275505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sldrp!5e1!3m2!1sen!2sin!4v1765386148290!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
@@ -240,4 +240,5 @@
     <!-- Changed console.js to script2.js -->
     <script src="console.js"></script> 
 </body>
+
 </html>
