--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
         <div class="map-container" id="location">
             <h2 class="section-title location-title">Campus <span>Location</span></h2>
-           <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15085.818674712005!2d72.6384638!3d23.2275505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sldrp!5e1!3m2!1sen!2sin!4v1765386148290!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12453.709959834809!2d72.62545313089579!3d23.234537469231217!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395c2b933477ba9f%3A0xe440409e66bea08a!2sLDRP%20Institute%20of%20Technology%20and%20Research!5e1!3m2!1sen!2sin!4v1765386657492!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
@@ -242,3 +242,4 @@
 </body>
 
 </html>
+
