--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
  <section class="placement1" id="placement">
         <h2 class="section-title">Placement <span>Highlights</span></h2>
       <p style="font-size:28px; color: #42494d; text-align: left; line-height: 1.5;">
-    Our college has an excellent placement record with top companies visiting every year.<br>
-    More than 80% of students get placed in reputed organizations.<br>
-    Companies offer roles in software development, data science, AI/ML, web development, and networking.<br>
-    We provide placement training, aptitude sessions, and interview preparation support.<br>
-    Many students also secure internships that later convert into full-time jobs.
+    ➤Our college has an excellent placement record with top companies visiting every year.<br>
+    ➤More than 80% of students get placed in reputed organizations.<br>
+    ➤Companies offer roles in software development, data science, AI/ML, web development, and networking.<br>
+    ➤We provide placement training, aptitude sessions, and interview preparation support.<br>
+    ➤Many students also secure internships that later convert into full-time jobs.
 </p>
 
 <br>
@@ -242,4 +242,5 @@
 </body>
 
 </html>
+
 
